# NIR

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.dev  README.md  compose.prod.yaml  compose.yaml  main.py  pyproject.toml
.github/workflows/: ci-cd.yml
examples/: external-web-evaluation-dataset.json  long-document-evaluation-dataset.json  quality-evaluation-dataset.json  source-material-examples.json  tag-quality-evaluation-dataset.json
examples/long-documents/: ambiguous-overview.txt  course-practicum.txt  research-review.txt  retrieval-platform.txt
examples/source-materials/: fos-nir-excerpt.txt  llm-evaluation-review-excerpt.txt  smart-favorites-excerpt.txt  tagging-stack-selection-excerpt.txt
nir_tagging_service/: __init__.py  api.py  app.py  bootstrap.py  categorization.py  category_catalog.py  config.py  dependencies.py  embeddings.py  evaluation.py  job_progress.py  job_service.py  language.py  llm_enhancement.py  observability.py  pipeline.py  preprocessing.py  rules.py  schemas.py  tag_extraction.py  tag_postprocessing.py
nir_tagging_service/api/: __init__.py  jobs.py  system.py
nir_tagging_service/db/: __init__.py  models.py  schema.py  session.py
nir_tagging_service_demo_front/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
tests/: test_assignment7_external_dataset.py  test_categorization.py  test_db_session.py  test_embeddings.py  test_evaluation.py  test_pipeline_api.py  test_preprocessing.py  test_rules.py  test_service_bootstrap.py  test_tag_extraction.py
(+26 files in other folders)
