[project]
name = "nir"
version = "0.1.0"
description = "Autonomous tagging and categorization MVP service"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.2",
    "pydantic-settings>=2.13.1",
    "psycopg[binary]>=3.3.3",
    "sqlalchemy>=2.0.48",
    "uvicorn>=0.42.0",
    "numpy>=2.4.3",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=5.3.0",
    "keybert>=0.9.0",
    "openai>=2.30.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
